fix: avoid horizontal scroll bar triggered by node-hover-tooltip

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -8,6 +8,7 @@
 body {
   background-color: @background;
   font-family: 'Roboto', sans-serif;
+  overflow: hidden; // avoid horizontal scroll bar triggered by node-hover-tooltip
 }
 
 #app {
